--- a/app/src/main/res/layout/a_chat_rooms_list_row.xml
+++ b/app/src/main/res/layout/a_chat_rooms_list_row.xml
@@ -17,12 +17,13 @@
         android:layout_marginTop="2dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/name"
-        android:layout_width="220dp"
+        android:layout_width="190dp"
         android:layout_height="20dp"
         android:textColor="#221e1f"
-        android:text="username"
+        android:text="유저명"
         android:textStyle="bold"
         android:ellipsize="end"
+        android:singleLine="true"
         android:maxLines="1"
         android:textSize="16sp"
         android:layout_alignParentTop="true"
@@ -32,10 +33,13 @@
     <TextView android:id="@+id/message"
         android:layout_marginTop="9dp"
         android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:textColor="#a2a1a1"
         android:textSize="13sp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:maxLines="1"
         android:text="Seems gcm will take some time"
         android:layout_alignBottom="@+id/count"
         android:layout_toRightOf="@+id/thumb"
@@ -44,13 +48,14 @@
     <TextView android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AM 12:00"
+        android:text="11.11 오후 11:11"
         android:textSize="11sp"
         android:textColor="#8a8aba"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
@@ -62,7 +67,7 @@
         android:layout_alignParentRight="true"
         android:paddingLeft="7dp"
         android:paddingRight="7dp"
-        android:text="5"
+        android:text="N"
         android:background="@drawable/z_tab_count_bg"/>
     <!--android:background="@drawable/bg_circle"-->
 </RelativeLayout>
