--- a/app/src/main/res/layout/a_chat_item_other.xml
+++ b/app/src/main/res/layout/a_chat_item_other.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="17dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
-
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -17,31 +17,42 @@
     <TextView
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="7dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/message"
-        android:maxWidth="212dp"
+        android:maxWidth="216dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textIsSelectable="true"
         android:background="@drawable/bg_bubble_white"
         android:textColor="#414041"
         android:textSize="14sp"
-        android:hint="msg"
-        android:layout_centerVertical="true"
+        android:hint=""
+        android:layout_alignTop="@+id/thumb"
         android:layout_toRightOf="@+id/thumb"
         android:layout_toEndOf="@+id/thumb" />
-
+    <TextView
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="2dp"
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#414041"
+        android:textSize="12sp"
+        android:hint="유저명"
+        android:layout_alignTop="@+id/thumb"
+        android:layout_toRightOf="@+id/thumb"
+        android:layout_toEndOf="@+id/thumb" />
     <TextView
         android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="4dp"
+        android:paddingBottom="0dp"
         android:textSize="11sp"
         android:textColor="#6d6f71"
         android:hint="오후 2:10"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="7dp"
         android:layout_toRightOf="@+id/message"
         android:layout_toEndOf="@+id/message" />
-
 
 </RelativeLayout>
