--- a/app/src/main/res/layout/a_chat_item_self.xml
+++ b/app/src/main/res/layout/a_chat_item_self.xml
@@ -4,23 +4,34 @@
     android:layout_height="wrap_content"
     android:gravity="right"
     android:orientation="horizontal"
-    android:layout_marginTop="17dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
-
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@null"
+        android:visibility="gone"
+        android:id="@+id/thumb"/>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="username"
+        android:textSize="11sp" />
+    <!--android:textIsSelectable="true"-->
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:maxWidth="256dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="7dp"
-        android:textIsSelectable="true"
         android:background="@drawable/bg_bubble_gray"
         android:textSize="14sp"
         android:textColor="#ffffff"
-        android:hint="msg"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
