--- a/app/src/main/res/layout/a_content_chat_room.xml
+++ b/app/src/main/res/layout/a_content_chat_room.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/chat_room_back_ground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.gcmchat.activity.ChatRoomActivity"
     tools:showIn="@layout/a_activity_chat_room">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:layout_marginBottom="60dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
+            android:scrollbars="vertical"/>
+        <include
+            android:layout_gravity="bottom"
+            layout="@layout/common_chat_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+             />
+    </FrameLayout>
 
 
-    <include
-        layout="@layout/common_chat_input_layout"
-        android:layout_alignParentBottom="true"
-        android:gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-
-</RelativeLayout>
+</LinearLayout>
