--- a/app/src/main/res/layout/content_board_detail.xml
+++ b/app/src/main/res/layout/content_board_detail.xml
@@ -73,6 +73,7 @@
                             android:text="16"/>
 
                         <TextView
+                            android:layout_marginLeft="4dp"
                             android:id="@+id/text_board_dept"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -145,7 +146,7 @@
                     android:id="@+id/text_board_body"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="교양 수업 스포츠 문화 책 구합니다." />
+                    android:text="" />
                 <LinearLayout
                     android:background="@drawable/e__count_bar"
                     android:layout_width="match_parent"
