--- a/app/src/main/res/layout/content_friends_detail.xml
+++ b/app/src/main/res/layout/content_friends_detail.xml
@@ -16,11 +16,11 @@
     <FrameLayout
         android:id="@+id/FrameLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="306dp">
 
         <ImageView
             android:id="@+id/image_friends_detail_main"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="244dp"
             android:layout_marginBottom="58dp"
             android:scaleType="centerCrop"
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="58dp"
+            android:layout_marginBottom="62dp"
             android:background="@drawable/b_main_view_contents_bg" />
         <ImageView
             android:id="@+id/image_friends_detail_back_icon"
@@ -61,90 +61,91 @@
                 android:minWidth="118dp"
                 android:src="@drawable/e__who_icon" />
         </FrameLayout>
-
-        <LinearLayout
-            android:layout_marginRight="8dp"
+    </FrameLayout>
+    <LinearLayout
+        android:layout_marginTop="216dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="right|bottom"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:id="@+id/text_friends_detail_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="7dp"
+            android:textColor="#ecedec"
+            android:textSize="20sp"
+            android:layout_gravity="bottom|right"
+            android:text="username" />
+        <FrameLayout
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|right">
-
-            <TextView
-                android:id="@+id/text_friends_detail_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="4dp"
-                android:textColor="#ecedec"
-                android:textSize="20sp"
-                android:layout_gravity="bottom|right"
-                android:text="username" />
-
-            <FrameLayout
-                android:layout_marginRight="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:layout_gravity="bottom|right">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/text_friends_detail_stuid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3d3939"
                     android:textSize="14sp"
-                    android:text="17"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text="17"/>
 
                 <TextView
+                    android:layout_marginLeft="4dp"
                     android:id="@+id/text_friends_detail_deptname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:textColor="#3d3939"
                     android:textSize="14sp"
-                    android:text="산업디자인과"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text="산업디자인과"/>
             </LinearLayout>
-            </FrameLayout>
-            <FrameLayout
-                android:layout_marginRight="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right">
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right">
             <LinearLayout
+                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
                 <TextView
+                    android:layout_gravity="right"
                     android:id="@+id/text_friends_detail_jobname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="13sp"
                     android:textColor="#868585"
                     android:text="회사명"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="7dp"/>
 
                 <TextView
+                    android:layout_gravity="right"
                     android:id="@+id/text_friends_detail_jobteam"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:textSize="13sp"
                     android:textColor="#868585"
-                    android:text="직무명"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text="팀명"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="7dp"/>
             </LinearLayout>
-            </FrameLayout>
-            <FrameLayout
-                android:layout_marginRight="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right">
+        </FrameLayout>
+        <FrameLayout
+            android:layout_marginRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -165,12 +166,13 @@
                     android:text="0.00km"
                     android:layout_gravity="center_vertical"/>
             </LinearLayout>
-            </FrameLayout>
-        </LinearLayout>
-    </FrameLayout>
+        </FrameLayout>
+    </LinearLayout>
+
+
     <LinearLayout
         android:id="@+id/LinearLayout1"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -208,6 +210,7 @@
             android:src="@drawable/c__icon_3" />
     </LinearLayout>
     <LinearLayout
+        android:layout_marginTop="16dp"
         android:layout_below="@+id/LinearLayout1"
         android:id="@+id/LinearLayout2"
         android:layout_width="match_parent"
