--- a/app/src/main/res/layout/content_board_detail.xml
+++ b/app/src/main/res/layout/content_board_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
+    android:id="@+id/rootView"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.tab.board.detail.BoardDetailActivity"
     tools:showIn="@layout/activity_board_detail">
