--- a/app/src/main/res/layout/a_content_chat_room.xml
+++ b/app/src/main/res/layout/a_content_chat_room.xml
@@ -12,19 +12,32 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_marginBottom="50dp"
-            android:scrollbars="vertical"/>
+            android:id="@+id/refresh">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/recycler_view"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginBottom="50dp"-->
+            <!--android:scrollbars="vertical"/>-->
         <include
             android:layout_gravity="bottom"
             layout="@layout/common_chat_input_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-             />
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 
