--- a/app/src/main/res/layout/content_signup_way.xml
+++ b/app/src/main/res/layout/content_signup_way.xml
@@ -36,6 +36,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/z_btn_white_selector"
                 android:src="@drawable/common_next"/>
         </FrameLayout>
 
@@ -72,6 +73,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/z_btn_white_selector"
                 android:src="@drawable/common_next"/>
         </FrameLayout>
     </LinearLayout>
@@ -107,6 +109,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/z_btn_white_selector"
                 android:src="@drawable/common_next"/>
         </FrameLayout>
     </LinearLayout>
