--- a/app/src/main/res/layout/content_setting.xml
+++ b/app/src/main/res/layout/content_setting.xml
@@ -34,7 +34,8 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"/>
+        <!--android:src="@drawable/f_my_next_selecotr"-->
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linear_set_version"
@@ -61,7 +62,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"/>
     </LinearLayout>
 
     <LinearLayout
@@ -89,7 +90,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"/>
     </LinearLayout>
 
     <LinearLayout
@@ -117,7 +118,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"/>
     </LinearLayout>
 
 
@@ -146,7 +147,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"/>
     </LinearLayout>
 
     <LinearLayout
@@ -174,6 +175,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/f_my_next_selecotr"/>
+            android:src="@drawable/common_next"
+            />
     </LinearLayout>
 </LinearLayout>
