--- a/app/src/main/res/layout/view_status_child.xml
+++ b/app/src/main/res/layout/view_status_child.xml
@@ -107,15 +107,17 @@
         <FrameLayout
             android:layout_gravity="center_vertical|end"
             android:id="@+id/frame_msg_layout"
-            android:background="@drawable/z_btn_white_selector"
+
             android:layout_width="90dp"
             android:layout_height="match_parent">
+            <!--android:background="@drawable/z_btn_white_selector"-->
             <ImageView
                 android:id="@+id/image_friends_status_msg"
                 android:layout_marginRight="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|end"
+                android:background="@drawable/z_btn_white_selector"
                 android:src="@drawable/f_new_icon_receive" />
             <TextView
                 android:visibility="gone"
