--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,7 +50,7 @@
     <!--empty_msg_color-->
     <color name="feed_none_pressed">#f1f2f2</color>
     <color name="feed_pressed">#ffffff</color>
-    <color name="empty_msg_color">#403f41</color>
+    <color name="empty_msg_color">#929497</color>
 
     <color name="total_selected">#606a72</color>
     <color name="tab_count">#d20e0a</color>
