--- a/app/src/main/res/layout/a_content_main.xml
+++ b/app/src/main/res/layout/a_content_main.xml
@@ -22,16 +22,10 @@
         android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/text_empty_msg"
-            android:layout_gravity="center"
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/empty_msg_size"
-            android:textColor="@color/empty_msg_color"
-            android:textStyle="bold|italic"
-            android:text="새 소식이 없습니다."/>
+        <include
+            layout="@layout/common_empty_msg_layout_v2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
