--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,38 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@drawable/a_join_login_activity_bg"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.login.LoginActivity">
 
-    <FrameLayout
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:id="@+id/FrameLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="240dp" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/a_join_logo" />
-    </FrameLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_email"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal">
+    <LinearLayout
+        android:layout_marginTop="298dp"
+        android:background="@drawable/a_join_login_input_bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical">
         <EditText
-            android:background="@drawable/edit_text_underline2"
+            android:background="@null"
             android:id="@+id/login_editText1"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:hint="이메일"
             android:textColorHint="#bcbbbd"
@@ -43,21 +30,14 @@
             android:lines="1"
             android:nextFocusDown="@+id/login_editText2"
             android:textSize="15sp" />
-    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_pw"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="13dp">
         <EditText
-            android:background="@drawable/edit_text_underline2"
+            android:background="@null"
             android:id="@+id/login_editText2"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:fontFamily="nanum_bold"
             android:hint="비밀번호"
@@ -67,97 +47,81 @@
             android:lines="1"
             android:singleLine="true"
             android:textSize="15sp" />
-    </android.support.design.widget.TextInputLayout>
 
-    <FrameLayout
-        android:layout_marginTop="36dp"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="19dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_login"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="232dp"
+            android:layout_width="324dp"
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/a_join_login_btn_selector"
             android:text="" />
         <Button
+            android:layout_marginTop="6dp"
+            android:id="@+id/btn_signup"
+            android:layout_width="324dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/a_join_sign_up_btn_selector"
+            android:text="" />
+        <Button
+            android:visibility="gone"
             android:id="@+id/btn_scroll"
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:background="@drawable/a_join_login_btn_selector"
             android:text="scroll" />
-    </FrameLayout>
+        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
+            android:visibility="gone"
+            android:id="@+id/buttonOAuthLoginImg"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="324dp"
+            android:layout_height="40dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/image_login_idfind"
             android:src="@drawable/a_search_idfind_selector"
-            android:layout_width="76dp"
-            android:layout_height="14dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <LinearLayout
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="1dp"
             android:layout_height="14dp"
-            android:background="#BBBDBF"
+            android:background="@color/colorAccent"
             android:orientation="vertical">
-
         </LinearLayout>
         <ImageView
             android:id="@+id/image_login_pwfind"
             android:src="@drawable/a_search_pwfind_selector"
-            android:layout_width="78dp"
-            android:layout_height="16dp"
-            android:paddingBottom="2dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal" >
-            <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
-                android:id="@+id/buttonOAuthLoginImg"
-                android:layout_width="232dp"
-                android:layout_height="40dp" />
-        </LinearLayout>
-        <LinearLayout
+        <ImageView
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="32dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="아직 회원이 아니신가요?"
-                android:textColor="#8F9193"
-                android:textSize="13sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                />
-            <TextView
-                android:id="@+id/text_login_signup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:textColor="#77A7BB"
-                android:textSize="13sp"
-                android:background="@drawable/z_btn_white_selector"
-                android:text="회원가입"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-        </LinearLayout>
-    </FrameLayout>
+            android:src="@drawable/a_join_login_activity_app_name"/>
 
+    </FrameLayout>
 
 </LinearLayout>
