--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,31 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#ffffff"
     tools:context="kr.me.ansr.login.SplashActivity" >
        <ImageView
-           android:layout_marginTop="60dp"
-           android:layout_width="match_parent"
-           android:layout_height="200dp"
-           android:src="@drawable/a_join_logo"/>
-
-       <ProgressBar
-           android:layout_marginTop="50dp"
-           android:layout_marginBottom="50dp"
-           android:layout_gravity="center_horizontal"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content" />
-       <TextView
-           android:layout_gravity="center_horizontal"
-           android:id="@+id/textView1"
+           android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Splash"
-           android:textAppearance="?android:attr/textAppearanceLarge"
-           android:textSize="50sp" />
+           android:src="@drawable/z_splash"/>
 
-
-    
-</LinearLayout>
+</RelativeLayout>
