--- a/app/src/main/res/layout/dialog_search_friends.xml
+++ b/app/src/main/res/layout/dialog_search_friends.xml
@@ -9,7 +9,7 @@
         android:background="@drawable/z_dialog_search_friends"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <kr.me.ansr.common.CustomEditText
+        <EditText
             android:id="@+id/edit_search_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,30 +23,45 @@
             android:textColor="@color/signupFontColor"
             android:singleLine="true"
             android:inputType="text"
-            android:nextFocusDown="@+id/edit_search_enteryear"/>
-
-        <kr.me.ansr.common.CustomEditText
-            android:id="@+id/edit_search_enteryear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:layout_marginTop="14dp"
-            android:layout_marginLeft="106dp"
-            android:layout_marginRight="20dp"
-            android:textSize="@dimen/search_text_size"
-            android:hint="학 번"
-            android:textColorHint="@color/signupHintColor"
-            android:textColor="@color/signupFontColor"
-            android:singleLine="true"
-            android:inputType="text"
             android:nextFocusDown="@+id/edit_search_dept"/>
 
-        <kr.me.ansr.common.CustomEditText
+        <Spinner
+            android:id="@+id/spinner"
+            android:spinnerMode="dropdown"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="1dp"
+            android:textColorHint="@color/signupHintColor"
+            android:textColor="@color/signupFontColor"
+            android:textSize="@dimen/search_text_size"
+            android:background="@null"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="20dp"/>
+        <!--<kr.me.ansr.common.CustomEditText-->
+            <!--android:id="@+id/edit_search_enteryear"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@null"-->
+            <!--android:layout_marginTop="14dp"-->
+            <!--android:layout_marginLeft="106dp"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:textSize="@dimen/search_text_size"-->
+            <!--android:hint="학 번"-->
+            <!--android:textColorHint="@color/signupHintColor"-->
+            <!--android:textColor="@color/signupFontColor"-->
+            <!--android:singleLine="true"-->
+            <!--android:inputType="text"-->
+            <!--android:nextFocusDown="@+id/edit_search_dept"/>-->
+
+        <EditText
             android:id="@+id/edit_search_dept"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="106dp"
             android:layout_marginRight="20dp"
             android:textSize="@dimen/search_text_size"
@@ -57,12 +72,12 @@
             android:inputType="text"
             android:nextFocusDown="@+id/edit_search_jobname"/>
 
-        <kr.me.ansr.common.CustomEditText
+        <EditText
             android:id="@+id/edit_search_jobname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="13dp"
             android:layout_marginLeft="106dp"
             android:layout_marginRight="20dp"
             android:textSize="@dimen/search_text_size"
@@ -72,7 +87,7 @@
             android:singleLine="true"
             android:inputType="text"
             android:nextFocusDown="@+id/edit_search_jobteam"/>
-        <kr.me.ansr.common.CustomEditText
+        <EditText
             android:id="@+id/edit_search_jobteam"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -86,7 +101,7 @@
             android:textColor="@color/signupFontColor"
             android:singleLine="true"
             android:inputType="text"
-            android:imeOptions="actionSearch"
+            android:imeOptions="actionDone"
             />
         <LinearLayout
             android:layout_marginTop="12dp"
@@ -98,7 +113,7 @@
                 android:text="취 소"
                 android:layout_weight="1"
                 android:textColor="#ffffff"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:background="@null"
                 android:layout_width="190dp"
                 android:layout_height="30dp" />
@@ -107,7 +122,7 @@
                 android:text="확 인"
                 android:layout_weight="1"
                 android:textColor="#ffffff"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:background="@null"
                 android:layout_width="190dp"
                 android:layout_height="30dp" />
