--- a/app/src/main/res/layout/fragment_status_block.xml
+++ b/app/src/main/res/layout/fragment_status_block.xml
@@ -8,16 +8,27 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.tab.mypage.status.BlockFragment">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/refresh">
-        <android.support.v7.widget.RecyclerView
+        android:background="@android:color/white">
+        <include
+            layout="@layout/common_empty_msg_layout_v2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:id="@+id/refresh">
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycler"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                />
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </FrameLayout>
+
 </LinearLayout>
