--- a/app/src/main/res/layout/content_friends_detail.xml
+++ b/app/src/main/res/layout/content_friends_detail.xml
@@ -248,6 +248,7 @@
             </LinearLayout>
             <ListView
                 android:id="@+id/listView_profile"
+                android:divider="@null"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></ListView>
         </FrameLayout>
